--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -26,8 +26,15 @@
     -->
     <title>React App</title>
   </head>
+  <script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgLmMpKCzveJf1_yuA0fUzzhy0WRChvZA"
+  async
+  defer
+></script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="backdrop-hook"></div>
+    <div id="modal-hook"></div>
     <div id="drawer-hook"> </div>
     <div id="root"></div>
     <!--
