--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -26,11 +26,8 @@
     -->
     <title>React App</title>
   </head>
-  <script
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgLmMpKCzveJf1_yuA0fUzzhy0WRChvZA"
-  async
-  defer
-></script>
+  <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js"></script>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="backdrop-hook"></div>
